# KO_Projekte

KO_Artemis_1/: EnumerationSolver.cpp  EnumerationSolver.hpp
KO_Projekt2/: CMakeLists.txt  DynamicProgramSolver.cpp  DynamicProgramSolver.hpp  Instance.cpp  Instance.hpp  Reader.cpp  main.cpp  parameter_reader.hpp  time_diff.txt
KO_Projekt3/: CMakeLists.txt  SimulatedAnnealing  SimulatedAnnealing.cpp  SimulatedAnnealing.hpp  main
P1_Code/: CMakeLists.txt  EnumerationSolver.cpp  EnumerationSolver.hpp  main.cpp
